--- a/Content/Site.css
+++ b/Content/Site.css
@@ -1,6 +1,11 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 0px;
     padding-bottom: 20px;
+    margin:2%;
+}
+
+.col-md-4{
+background-color:lightgray;
 }
 
 /* Set padding to keep content from hitting the edges */
